Fix block quote color, too light couldn't read

--- a/style.css
+++ b/style.css
@@ -467,8 +467,9 @@ ul {
 
 blockquote,
 blockquote::before {
-	color: #ccc;
+	color: #4d4d4e;
 	font-size: 17px;
+	background-color: #fbfbfb
 }
 
 blockquote {
